// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add fields modal in skipping index renders add fields modal in skipping index with default options 1`] = `
<Portal
  containerInfo={
    <div
      class="euiOverlayMask euiOverlayMask--aboveHeader"
    >
      <div
        aria-hidden="true"
        data-aria-hidden="true"
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="0"
      />
      <div
        data-focus-lock-disabled="false"
      >
        <div
          class="euiModal euiModal--maxWidth-default"
          tabindex="0"
        >
          <button
            aria-label="Closes this modal window"
            class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiModal__closeIcon"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonIcon__icon"
              focusable="false"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
              />
            </svg>
          </button>
          <div
            class="euiModal__flex"
          >
            <div
              class="euiModalHeader"
            >
              <div
                class="euiModalHeader__title"
              >
                <h1>
                  Add fields
                </h1>
              </div>
            </div>
            <div
              class="euiModalBody"
            >
              <div
                class="euiModalBody__overflow"
              >
                <div>
                  <div
                    class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive euiFlexGroup--wrap"
                  >
                    <div
                      class="euiFlexItem euiSearchBar__searchHolder"
                    >
                      <div
                        class="euiFormControlLayout euiFormControlLayout--fullWidth"
                      >
                        <div
                          class="euiFormControlLayout__childrenWrapper"
                        >
                          <input
                            aria-label="This is a search bar. After typing your query, hit enter to filter the results lower in the page."
                            class="euiFieldSearch euiFieldSearch--fullWidth"
                            placeholder="Search..."
                            type="search"
                            value=""
                          />
                          <div
                            class="euiFormControlLayoutIcons"
                          >
                            <span
                              class="euiFormControlLayoutCustomIcon"
                            >
                              <svg
                                aria-hidden="true"
                                class="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                                focusable="false"
                                height="16"
                                role="img"
                                viewBox="0 0 16 16"
                                width="16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                                />
                              </svg>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="euiSpacer euiSpacer--l"
                  />
                  <div
                    class="euiBasicTable"
                  >
                    <div>
                      <div
                        class="euiTableHeaderMobile"
                      >
                        <div
                          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsBaseline euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
                        >
                          <div
                            class="euiFlexItem euiFlexItem--flexGrowZero"
                          >
                            <div
                              class="euiCheckbox"
                            >
                              <input
                                aria-label="Select all rows"
                                class="euiCheckbox__input"
                                disabled=""
                                id="_selection_column-checkbox_some_html_id"
                                type="checkbox"
                              />
                              <div
                                class="euiCheckbox__square"
                              />
                              <label
                                class="euiCheckbox__label"
                                for="_selection_column-checkbox_some_html_id"
                              >
                                Select all rows
                              </label>
                            </div>
                          </div>
                          <div
                            class="euiFlexItem euiFlexItem--flexGrowZero"
                          >
                            <div
                              class="euiTableSortMobile"
                            >
                              <div
                                class="euiPopover euiPopover--anchorDownRight"
                              >
                                <div
                                  class="euiPopover__anchor"
                                >
                                  <button
                                    class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiButtonEmpty--flushRight"
                                    type="button"
                                  >
                                    <span
                                      class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                                    >
                                      <svg
                                        aria-hidden="true"
                                        class="euiIcon euiIcon--small euiIcon--inherit euiIcon-isLoading euiButtonContent__icon"
                                        focusable="false"
                                        height="16"
                                        role="img"
                                        viewBox="0 0 16 16"
                                        width="16"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                                        />
                                      </svg>
                                      <span
                                        class="euiButtonEmpty__text"
                                      >
                                        Sorting
                                      </span>
                                    </span>
                                  </button>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <table
                        class="euiTable euiTable--responsive"
                        id="some_html_id"
                        tabindex="-1"
                      >
                        <caption
                          class="euiScreenReaderOnly euiTableCaption"
                        />
                        <thead>
                          <tr>
                            <th
                              class="euiTableHeaderCellCheckbox"
                              scope="col"
                            >
                              <div
                                class="euiTableCellContent"
                              >
                                <div
                                  class="euiCheckbox euiCheckbox--inList euiCheckbox--noLabel"
                                >
                                  <input
                                    aria-label="Select all rows"
                                    class="euiCheckbox__input"
                                    data-test-subj="checkboxSelectAll"
                                    disabled=""
                                    id="_selection_column-checkbox_some_html_id"
                                    type="checkbox"
                                  />
                                  <div
                                    class="euiCheckbox__square"
                                  />
                                </div>
                              </div>
                            </th>
                            <th
                              aria-live="polite"
                              aria-sort="none"
                              class="euiTableHeaderCell"
                              data-test-subj="tableHeaderCell_fieldName_0"
                              role="columnheader"
                              scope="col"
                            >
                              <button
                                class="euiTableHeaderButton"
                                data-test-subj="tableHeaderSortButton"
                                type="button"
                              >
                                <span
                                  class="euiTableCellContent"
                                >
                                  <span
                                    class="euiTableCellContent__text"
                                    title="Field name"
                                  >
                                    Field name
                                  </span>
                                </span>
                              </button>
                            </th>
                            <th
                              aria-live="polite"
                              aria-sort="none"
                              class="euiTableHeaderCell"
                              data-test-subj="tableHeaderCell_dataType_1"
                              role="columnheader"
                              scope="col"
                            >
                              <button
                                class="euiTableHeaderButton"
                                data-test-subj="tableHeaderSortButton"
                                type="button"
                              >
                                <span
                                  class="euiTableCellContent"
                                >
                                  <span
                                    class="euiTableCellContent__text"
                                    title="Datatype"
                                  >
                                    Datatype
                                  </span>
                                </span>
                              </button>
                            </th>
                          </tr>
                        </thead>
                        <tbody>
                          <tr
                            class="euiTableRow"
                          >
                            <td
                              class="euiTableRowCell euiTableRowCell--isMobileFullWidth"
                              colspan="3"
                            >
                              <div
                                class="euiTableCellContent euiTableCellContent--alignCenter"
                              >
                                <span
                                  class="euiTableCellContent__text"
                                >
                                  No items found
                                </span>
                              </div>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="euiModalFooter"
            >
              <button
                class="euiButton euiButton--primary"
                type="button"
              >
                <span
                  class="euiButtonContent euiButton__content"
                >
                  <span
                    class="euiButton__text"
                  >
                    Cancel
                  </span>
                </span>
              </button>
              <button
                class="euiButton euiButton--primary euiButton--fill"
                type="button"
              >
                <span
                  class="euiButtonContent euiButton__content"
                >
                  <span
                    class="euiButton__text"
                  >
                    Add
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-aria-hidden="true"
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="0"
      />
    </div>
  }
>
  Array [
    Array [
      <div
        data-focus-guard={true}
        key="guard-first"
        style={
          Object {
            "height": "0px",
            "left": "1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "fixed",
            "top": "1px",
            "width": "1px",
          }
        }
        tabIndex={0}
      />,
      "",
      <div
        data-focus-lock-disabled={false}
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onScrollCapture={[Function]}
        onTouchMoveCapture={[Function]}
        onTouchStart={[Function]}
        onWheelCapture={[Function]}
      >
        <div
          className="euiModal euiModal--maxWidth-default"
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <button
            aria-label="Closes this modal window"
            className="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiModal__closeIcon"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <svg
              aria-hidden={true}
              className="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonIcon__icon"
              focusable="false"
              height={16}
              role="img"
              style={null}
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
              />
            </svg>
          </button>
          <div
            className="euiModal__flex"
          >
            <div
              className="euiModalHeader"
            >
              <div
                className="euiModalHeader__title"
              >
                <h1>
                  Add fields
                </h1>
              </div>
            </div>
            <div
              className="euiModalBody"
            >
              <div
                className="euiModalBody__overflow"
              >
                <div>
                  <div
                    className="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive euiFlexGroup--wrap"
                  >
                    <div
                      className="euiFlexItem euiSearchBar__searchHolder"
                    >
                      <div
                        className="euiFormControlLayout euiFormControlLayout--fullWidth"
                      >
                        <div
                          className="euiFormControlLayout__childrenWrapper"
                        >
                          <input
                            aria-label="This is a search bar. After typing your query, hit enter to filter the results lower in the page."
                            className="euiFieldSearch euiFieldSearch--fullWidth"
                            defaultValue=""
                            onKeyUp={[Function]}
                            placeholder="Search..."
                            type="search"
                          />
                          <div
                            className="euiFormControlLayoutIcons"
                          >
                            <span
                              className="euiFormControlLayoutCustomIcon"
                            >
                              <svg
                                aria-hidden={true}
                                className="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                                focusable="false"
                                height={16}
                                role="img"
                                style={null}
                                viewBox="0 0 16 16"
                                width={16}
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                                />
                              </svg>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="euiSpacer euiSpacer--l"
                  />
                  <div
                    className="euiBasicTable"
                  >
                    <div>
                      <div
                        className="euiTableHeaderMobile"
                      >
                        <div
                          className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsBaseline euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
                        >
                          <div
                            className="euiFlexItem euiFlexItem--flexGrowZero"
                          >
                            <div
                              className="euiCheckbox"
                            >
                              <input
                                aria-label="Select all rows"
                                checked={false}
                                className="euiCheckbox__input"
                                disabled={true}
                                id="_selection_column-checkbox_some_html_id"
                                onChange={[Function]}
                                type="checkbox"
                              />
                              <div
                                className="euiCheckbox__square"
                              />
                              <label
                                className="euiCheckbox__label"
                                htmlFor="_selection_column-checkbox_some_html_id"
                              >
                                Select all rows
                              </label>
                            </div>
                          </div>
                          <div
                            className="euiFlexItem euiFlexItem--flexGrowZero"
                          >
                            <div
                              className="euiTableSortMobile"
                            >
                              <div
                                className="euiPopover euiPopover--anchorDownRight"
                              >
                                <div
                                  className="euiPopover__anchor"
                                >
                                  <button
                                    className="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiButtonEmpty--flushRight"
                                    disabled={false}
                                    onClick={[Function]}
                                    type="button"
                                  >
                                    <span
                                      className="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                                    >
                                      <svg
                                        aria-hidden={true}
                                        className="euiIcon euiIcon--small euiIcon--inherit euiIcon-isLoading euiButtonContent__icon"
                                        focusable="false"
                                        height={16}
                                        role="img"
                                        style={null}
                                        viewBox="0 0 16 16"
                                        width={16}
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                                        />
                                      </svg>
                                      <span
                                        className="euiButtonEmpty__text"
                                      >
                                        Sorting
                                      </span>
                                    </span>
                                  </button>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <table
                        className="euiTable euiTable--responsive"
                        id="some_html_id"
                        tabIndex={-1}
                      >
                        <caption
                          className="euiScreenReaderOnly euiTableCaption"
                        />
                        <thead>
                          <tr>
                            <th
                              className="euiTableHeaderCellCheckbox"
                              scope="col"
                              style={
                                Object {
                                  "width": undefined,
                                }
                              }
                            >
                              <div
                                className="euiTableCellContent"
                              >
                                <div
                                  className="euiCheckbox euiCheckbox--inList euiCheckbox--noLabel"
                                >
                                  <input
                                    aria-label="Select all rows"
                                    checked={false}
                                    className="euiCheckbox__input"
                                    data-test-subj="checkboxSelectAll"
                                    disabled={true}
                                    id="_selection_column-checkbox_some_html_id"
                                    onChange={[Function]}
                                    type="checkbox"
                                  />
                                  <div
                                    className="euiCheckbox__square"
                                  />
                                </div>
                              </div>
                            </th>
                            <th
                              aria-live="polite"
                              aria-sort="none"
                              className="euiTableHeaderCell"
                              data-test-subj="tableHeaderCell_fieldName_0"
                              role="columnheader"
                              scope="col"
                              style={
                                Object {
                                  "width": undefined,
                                }
                              }
                            >
                              <button
                                className="euiTableHeaderButton"
                                data-test-subj="tableHeaderSortButton"
                                onClick={[Function]}
                                type="button"
                              >
                                <span
                                  className="euiTableCellContent"
                                >
                                  <span
                                    className="euiTableCellContent__text"
                                    title="Field name"
                                  >
                                    Field name
                                  </span>
                                </span>
                              </button>
                            </th>
                            <th
                              aria-live="polite"
                              aria-sort="none"
                              className="euiTableHeaderCell"
                              data-test-subj="tableHeaderCell_dataType_1"
                              role="columnheader"
                              scope="col"
                              style={
                                Object {
                                  "width": undefined,
                                }
                              }
                            >
                              <button
                                className="euiTableHeaderButton"
                                data-test-subj="tableHeaderSortButton"
                                onClick={[Function]}
                                type="button"
                              >
                                <span
                                  className="euiTableCellContent"
                                >
                                  <span
                                    className="euiTableCellContent__text"
                                    title="Datatype"
                                  >
                                    Datatype
                                  </span>
                                </span>
                              </button>
                            </th>
                          </tr>
                        </thead>
                        <tbody>
                          <tr
                            className="euiTableRow"
                          >
                            <td
                              className="euiTableRowCell euiTableRowCell--isMobileFullWidth"
                              colSpan={3}
                              style={
                                Object {
                                  "width": undefined,
                                }
                              }
                            >
                              <div
                                className="euiTableCellContent euiTableCellContent--alignCenter"
                              >
                                <span
                                  className="euiTableCellContent__text"
                                >
                                  No items found
                                </span>
                              </div>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="euiModalFooter"
            >
              <button
                className="euiButton euiButton--primary"
                disabled={false}
                onClick={[Function]}
                style={
                  Object {
                    "minWidth": undefined,
                  }
                }
                type="button"
              >
                <span
                  className="euiButtonContent euiButton__content"
                >
                  <span
                    className="euiButton__text"
                  >
                    Cancel
                  </span>
                </span>
              </button>
              <button
                className="euiButton euiButton--primary euiButton--fill"
                disabled={false}
                onClick={[Function]}
                style={
                  Object {
                    "minWidth": undefined,
                  }
                }
                type="button"
              >
                <span
                  className="euiButtonContent euiButton__content"
                >
                  <span
                    className="euiButton__text"
                  >
                    Add
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>,
      <div
        data-focus-guard={true}
        style={
          Object {
            "height": "0px",
            "left": "1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "fixed",
            "top": "1px",
            "width": "1px",
          }
        }
        tabIndex={0}
      />,
    ],
    "",
  ]
</Portal>
`;

exports[`Add fields modal in skipping index renders add fields modal in skipping index with different options 1`] = `
<Portal
  containerInfo={
    <div
      class="euiOverlayMask euiOverlayMask--aboveHeader"
    >
      <div
        aria-hidden="true"
        data-aria-hidden="true"
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="0"
      />
      <div
        data-focus-lock-disabled="false"
      >
        <div
          class="euiModal euiModal--maxWidth-default"
          tabindex="0"
        >
          <button
            aria-label="Closes this modal window"
            class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiModal__closeIcon"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="euiIcon euiIcon--medium euiIcon--inherit euiButtonIcon__icon"
              focusable="false"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.293 8 3.146 3.854a.5.5 0 1 1 .708-.708L8 7.293l4.146-4.147a.5.5 0 0 1 .708.708L8.707 8l4.147 4.146a.5.5 0 0 1-.708.708L8 8.707l-4.146 4.147a.5.5 0 0 1-.708-.708L7.293 8Z"
              />
            </svg>
          </button>
          <div
            class="euiModal__flex"
          >
            <div
              class="euiModalHeader"
            >
              <div
                class="euiModalHeader__title"
              >
                <h1>
                  Add fields
                </h1>
              </div>
            </div>
            <div
              class="euiModalBody"
            >
              <div
                class="euiModalBody__overflow"
              >
                <div>
                  <div
                    class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive euiFlexGroup--wrap"
                  >
                    <div
                      class="euiFlexItem euiSearchBar__searchHolder"
                    >
                      <div
                        class="euiFormControlLayout euiFormControlLayout--fullWidth"
                      >
                        <div
                          class="euiFormControlLayout__childrenWrapper"
                        >
                          <input
                            aria-label="This is a search bar. After typing your query, hit enter to filter the results lower in the page."
                            class="euiFieldSearch euiFieldSearch--fullWidth"
                            placeholder="Search..."
                            type="search"
                            value=""
                          />
                          <div
                            class="euiFormControlLayoutIcons"
                          >
                            <span
                              class="euiFormControlLayoutCustomIcon"
                            >
                              <svg
                                aria-hidden="true"
                                class="euiIcon euiIcon--medium euiFormControlLayoutCustomIcon__icon"
                                focusable="false"
                                height="16"
                                role="img"
                                viewBox="0 0 16 16"
                                width="16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="m11.271 11.978 3.872 3.873a.502.502 0 0 0 .708 0 .502.502 0 0 0 0-.708l-3.565-3.564c2.38-2.747 2.267-6.923-.342-9.532-2.73-2.73-7.17-2.73-9.898 0-2.728 2.729-2.728 7.17 0 9.9a6.955 6.955 0 0 0 4.949 2.05.5.5 0 0 0 0-1 5.96 5.96 0 0 1-4.242-1.757 6.01 6.01 0 0 1 0-8.486c2.337-2.34 6.143-2.34 8.484 0a6.01 6.01 0 0 1 0 8.486.5.5 0 0 0 .034.738Z"
                                />
                              </svg>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="euiSpacer euiSpacer--l"
                  />
                  <div
                    class="euiBasicTable"
                  >
                    <div>
                      <div
                        class="euiTableHeaderMobile"
                      >
                        <div
                          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsBaseline euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
                        >
                          <div
                            class="euiFlexItem euiFlexItem--flexGrowZero"
                          >
                            <div
                              class="euiCheckbox"
                            >
                              <input
                                aria-label="Select all rows"
                                class="euiCheckbox__input"
                                disabled=""
                                id="_selection_column-checkbox_some_html_id"
                                type="checkbox"
                              />
                              <div
                                class="euiCheckbox__square"
                              />
                              <label
                                class="euiCheckbox__label"
                                for="_selection_column-checkbox_some_html_id"
                              >
                                Select all rows
                              </label>
                            </div>
                          </div>
                          <div
                            class="euiFlexItem euiFlexItem--flexGrowZero"
                          >
                            <div
                              class="euiTableSortMobile"
                            >
                              <div
                                class="euiPopover euiPopover--anchorDownRight"
                              >
                                <div
                                  class="euiPopover__anchor"
                                >
                                  <button
                                    class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiButtonEmpty--flushRight"
                                    type="button"
                                  >
                                    <span
                                      class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                                    >
                                      <svg
                                        aria-hidden="true"
                                        class="euiIcon euiIcon--small euiIcon--inherit euiButtonContent__icon"
                                        focusable="false"
                                        height="16"
                                        role="img"
                                        viewBox="0 0 16 16"
                                        width="16"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                                          fill-rule="non-zero"
                                        />
                                      </svg>
                                      <span
                                        class="euiButtonEmpty__text"
                                      >
                                        Sorting
                                      </span>
                                    </span>
                                  </button>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <table
                        class="euiTable euiTable--responsive"
                        id="some_html_id"
                        tabindex="-1"
                      >
                        <caption
                          class="euiScreenReaderOnly euiTableCaption"
                        />
                        <thead>
                          <tr>
                            <th
                              class="euiTableHeaderCellCheckbox"
                              scope="col"
                            >
                              <div
                                class="euiTableCellContent"
                              >
                                <div
                                  class="euiCheckbox euiCheckbox--inList euiCheckbox--noLabel"
                                >
                                  <input
                                    aria-label="Select all rows"
                                    class="euiCheckbox__input"
                                    data-test-subj="checkboxSelectAll"
                                    disabled=""
                                    id="_selection_column-checkbox_some_html_id"
                                    type="checkbox"
                                  />
                                  <div
                                    class="euiCheckbox__square"
                                  />
                                </div>
                              </div>
                            </th>
                            <th
                              aria-live="polite"
                              aria-sort="none"
                              class="euiTableHeaderCell"
                              data-test-subj="tableHeaderCell_fieldName_0"
                              role="columnheader"
                              scope="col"
                            >
                              <button
                                class="euiTableHeaderButton"
                                data-test-subj="tableHeaderSortButton"
                                type="button"
                              >
                                <span
                                  class="euiTableCellContent"
                                >
                                  <span
                                    class="euiTableCellContent__text"
                                    title="Field name"
                                  >
                                    Field name
                                  </span>
                                </span>
                              </button>
                            </th>
                            <th
                              aria-live="polite"
                              aria-sort="none"
                              class="euiTableHeaderCell"
                              data-test-subj="tableHeaderCell_dataType_1"
                              role="columnheader"
                              scope="col"
                            >
                              <button
                                class="euiTableHeaderButton"
                                data-test-subj="tableHeaderSortButton"
                                type="button"
                              >
                                <span
                                  class="euiTableCellContent"
                                >
                                  <span
                                    class="euiTableCellContent__text"
                                    title="Datatype"
                                  >
                                    Datatype
                                  </span>
                                </span>
                              </button>
                            </th>
                          </tr>
                        </thead>
                        <tbody>
                          <tr
                            class="euiTableRow"
                          >
                            <td
                              class="euiTableRowCell euiTableRowCell--isMobileFullWidth"
                              colspan="3"
                            >
                              <div
                                class="euiTableCellContent euiTableCellContent--alignCenter"
                              >
                                <span
                                  class="euiTableCellContent__text"
                                >
                                  No items found
                                </span>
                              </div>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="euiModalFooter"
            >
              <button
                class="euiButton euiButton--primary"
                type="button"
              >
                <span
                  class="euiButtonContent euiButton__content"
                >
                  <span
                    class="euiButton__text"
                  >
                    Cancel
                  </span>
                </span>
              </button>
              <button
                class="euiButton euiButton--primary euiButton--fill"
                type="button"
              >
                <span
                  class="euiButtonContent euiButton__content"
                >
                  <span
                    class="euiButton__text"
                  >
                    Add
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-aria-hidden="true"
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="0"
      />
    </div>
  }
>
  Array [
    Array [
      <div
        data-focus-guard={true}
        key="guard-first"
        style={
          Object {
            "height": "0px",
            "left": "1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "fixed",
            "top": "1px",
            "width": "1px",
          }
        }
        tabIndex={0}
      />,
      "",
      <div
        data-focus-lock-disabled={false}
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onScrollCapture={[Function]}
        onTouchMoveCapture={[Function]}
        onTouchStart={[Function]}
        onWheelCapture={[Function]}
      >
        <div
          className="euiModal euiModal--maxWidth-default"
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <button
            aria-label="Closes this modal window"
            className="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiModal__closeIcon"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <svg
              aria-hidden={true}
              className="euiIcon euiIcon--medium euiIcon--inherit euiButtonIcon__icon"
              focusable="false"
              height={16}
              role="img"
              style={null}
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.293 8 3.146 3.854a.5.5 0 1 1 .708-.708L8 7.293l4.146-4.147a.5.5 0 0 1 .708.708L8.707 8l4.147 4.146a.5.5 0 0 1-.708.708L8 8.707l-4.146 4.147a.5.5 0 0 1-.708-.708L7.293 8Z"
              />
            </svg>
          </button>
          <div
            className="euiModal__flex"
          >
            <div
              className="euiModalHeader"
            >
              <div
                className="euiModalHeader__title"
              >
                <h1>
                  Add fields
                </h1>
              </div>
            </div>
            <div
              className="euiModalBody"
            >
              <div
                className="euiModalBody__overflow"
              >
                <div>
                  <div
                    className="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive euiFlexGroup--wrap"
                  >
                    <div
                      className="euiFlexItem euiSearchBar__searchHolder"
                    >
                      <div
                        className="euiFormControlLayout euiFormControlLayout--fullWidth"
                      >
                        <div
                          className="euiFormControlLayout__childrenWrapper"
                        >
                          <input
                            aria-label="This is a search bar. After typing your query, hit enter to filter the results lower in the page."
                            className="euiFieldSearch euiFieldSearch--fullWidth"
                            defaultValue=""
                            onKeyUp={[Function]}
                            placeholder="Search..."
                            type="search"
                          />
                          <div
                            className="euiFormControlLayoutIcons"
                          >
                            <span
                              className="euiFormControlLayoutCustomIcon"
                            >
                              <svg
                                aria-hidden={true}
                                className="euiIcon euiIcon--medium euiFormControlLayoutCustomIcon__icon"
                                focusable="false"
                                height={16}
                                role="img"
                                style={null}
                                viewBox="0 0 16 16"
                                width={16}
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="m11.271 11.978 3.872 3.873a.502.502 0 0 0 .708 0 .502.502 0 0 0 0-.708l-3.565-3.564c2.38-2.747 2.267-6.923-.342-9.532-2.73-2.73-7.17-2.73-9.898 0-2.728 2.729-2.728 7.17 0 9.9a6.955 6.955 0 0 0 4.949 2.05.5.5 0 0 0 0-1 5.96 5.96 0 0 1-4.242-1.757 6.01 6.01 0 0 1 0-8.486c2.337-2.34 6.143-2.34 8.484 0a6.01 6.01 0 0 1 0 8.486.5.5 0 0 0 .034.738Z"
                                />
                              </svg>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="euiSpacer euiSpacer--l"
                  />
                  <div
                    className="euiBasicTable"
                  >
                    <div>
                      <div
                        className="euiTableHeaderMobile"
                      >
                        <div
                          className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsBaseline euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
                        >
                          <div
                            className="euiFlexItem euiFlexItem--flexGrowZero"
                          >
                            <div
                              className="euiCheckbox"
                            >
                              <input
                                aria-label="Select all rows"
                                checked={false}
                                className="euiCheckbox__input"
                                disabled={true}
                                id="_selection_column-checkbox_some_html_id"
                                onChange={[Function]}
                                type="checkbox"
                              />
                              <div
                                className="euiCheckbox__square"
                              />
                              <label
                                className="euiCheckbox__label"
                                htmlFor="_selection_column-checkbox_some_html_id"
                              >
                                Select all rows
                              </label>
                            </div>
                          </div>
                          <div
                            className="euiFlexItem euiFlexItem--flexGrowZero"
                          >
                            <div
                              className="euiTableSortMobile"
                            >
                              <div
                                className="euiPopover euiPopover--anchorDownRight"
                              >
                                <div
                                  className="euiPopover__anchor"
                                >
                                  <button
                                    className="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiButtonEmpty--flushRight"
                                    disabled={false}
                                    onClick={[Function]}
                                    type="button"
                                  >
                                    <span
                                      className="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                                    >
                                      <svg
                                        aria-hidden={true}
                                        className="euiIcon euiIcon--small euiIcon--inherit euiButtonContent__icon"
                                        focusable="false"
                                        height={16}
                                        role="img"
                                        style={null}
                                        viewBox="0 0 16 16"
                                        width={16}
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                                          fillRule="non-zero"
                                        />
                                      </svg>
                                      <span
                                        className="euiButtonEmpty__text"
                                      >
                                        Sorting
                                      </span>
                                    </span>
                                  </button>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <table
                        className="euiTable euiTable--responsive"
                        id="some_html_id"
                        tabIndex={-1}
                      >
                        <caption
                          className="euiScreenReaderOnly euiTableCaption"
                        />
                        <thead>
                          <tr>
                            <th
                              className="euiTableHeaderCellCheckbox"
                              scope="col"
                              style={
                                Object {
                                  "width": undefined,
                                }
                              }
                            >
                              <div
                                className="euiTableCellContent"
                              >
                                <div
                                  className="euiCheckbox euiCheckbox--inList euiCheckbox--noLabel"
                                >
                                  <input
                                    aria-label="Select all rows"
                                    checked={false}
                                    className="euiCheckbox__input"
                                    data-test-subj="checkboxSelectAll"
                                    disabled={true}
                                    id="_selection_column-checkbox_some_html_id"
                                    onChange={[Function]}
                                    type="checkbox"
                                  />
                                  <div
                                    className="euiCheckbox__square"
                                  />
                                </div>
                              </div>
                            </th>
                            <th
                              aria-live="polite"
                              aria-sort="none"
                              className="euiTableHeaderCell"
                              data-test-subj="tableHeaderCell_fieldName_0"
                              role="columnheader"
                              scope="col"
                              style={
                                Object {
                                  "width": undefined,
                                }
                              }
                            >
                              <button
                                className="euiTableHeaderButton"
                                data-test-subj="tableHeaderSortButton"
                                onClick={[Function]}
                                type="button"
                              >
                                <span
                                  className="euiTableCellContent"
                                >
                                  <span
                                    className="euiTableCellContent__text"
                                    title="Field name"
                                  >
                                    Field name
                                  </span>
                                </span>
                              </button>
                            </th>
                            <th
                              aria-live="polite"
                              aria-sort="none"
                              className="euiTableHeaderCell"
                              data-test-subj="tableHeaderCell_dataType_1"
                              role="columnheader"
                              scope="col"
                              style={
                                Object {
                                  "width": undefined,
                                }
                              }
                            >
                              <button
                                className="euiTableHeaderButton"
                                data-test-subj="tableHeaderSortButton"
                                onClick={[Function]}
                                type="button"
                              >
                                <span
                                  className="euiTableCellContent"
                                >
                                  <span
                                    className="euiTableCellContent__text"
                                    title="Datatype"
                                  >
                                    Datatype
                                  </span>
                                </span>
                              </button>
                            </th>
                          </tr>
                        </thead>
                        <tbody>
                          <tr
                            className="euiTableRow"
                          >
                            <td
                              className="euiTableRowCell euiTableRowCell--isMobileFullWidth"
                              colSpan={3}
                              style={
                                Object {
                                  "width": undefined,
                                }
                              }
                            >
                              <div
                                className="euiTableCellContent euiTableCellContent--alignCenter"
                              >
                                <span
                                  className="euiTableCellContent__text"
                                >
                                  No items found
                                </span>
                              </div>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="euiModalFooter"
            >
              <button
                className="euiButton euiButton--primary"
                disabled={false}
                onClick={[Function]}
                style={
                  Object {
                    "minWidth": undefined,
                  }
                }
                type="button"
              >
                <span
                  className="euiButtonContent euiButton__content"
                >
                  <span
                    className="euiButton__text"
                  >
                    Cancel
                  </span>
                </span>
              </button>
              <button
                className="euiButton euiButton--primary euiButton--fill"
                disabled={false}
                onClick={[Function]}
                style={
                  Object {
                    "minWidth": undefined,
                  }
                }
                type="button"
              >
                <span
                  className="euiButtonContent euiButton__content"
                >
                  <span
                    className="euiButton__text"
                  >
                    Add
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>,
      <div
        data-focus-guard={true}
        style={
          Object {
            "height": "0px",
            "left": "1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "fixed",
            "top": "1px",
            "width": "1px",
          }
        }
        tabIndex={0}
      />,
    ],
    "",
  ]
</Portal>
`;
